--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="chessboard"></div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
