validMove.js added

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <div id="chessboard"></div>
     <script src="app.js"></script>
+    <script src="validMove.js"></script>
 </body>
 </html>
